[tool.poetry]
name = "yus-auto-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg = "^3.2.1"
fastapi = {extras = ["standart"], version = "^0.112.0"}
fastapi-cli = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
